--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "async": "^3.2.6",
     "babel": "^5.8.38",
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.3.3",
@@ -18,6 +19,8 @@
     "react-bootstrap": "^2.10.5",
     "react-card-slider-component": "^1.0.9",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
