--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel": "^5.8.38",
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.3.3",
+    "core-js": "^3.41.0",
     "dotenv": "^16.4.5",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
